--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -122,6 +122,10 @@ a:hover {
   background-color: $blue;
 }
 
+.q-form {
+	display: inline;
+}
+
 @media screen and (max-width:480px) {
 	h3 {
 		font-size: 1em;
