--- a/static/scss/style.css
+++ b/static/scss/style.css
@@ -7,6 +7,15 @@ h1 {
   font-weight: bold;
   color: black; }
 
+textarea {
+  font-size: 1em;
+  font-family: monospace;
+  background-color: black !important;
+  color: white !important; }
+
+.qc_count {
+  color: #acb1b4; }
+
 .logo {
   font-family: 'Pacifico', cursive; }
   .logo .whiteish {
@@ -55,7 +64,8 @@ h1 {
 
 .btn {
   margin-right: 10px;
-  border-radius: 100px; }
+  border-radius: 100px;
+  margin-bottom: 10px; }
 
 .btn-twitter {
   background-color: #1DA1F2;
@@ -64,6 +74,11 @@ h1 {
 
 .thumbnail {
   max-height: 100px; }
+
+.panel-default > .panel-heading {
+  background-color: #1DA1F2;
+  color: white;
+  font-size: 1.5em; }
 
 .list-group-item:first-child {
   border-top-left-radius: 0;
