--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
         <h1 class="text-center">Login</h1>
         <p class="lead text-center">Login with github securely.</p>
         <div class="text-center center-block">
-          <a href="/auth/github" class="btn btn-default text-center"><i class="fa fa-github"></i> Log-in</a>
+          <a href="/auth/github" class="btn btn-default btn-lg text-center"><i class="fa fa-github"></i> Log-in</a>
         </div>
       </div>
     </div>
