--- a/views/q_edit.ejs
+++ b/views/q_edit.ejs
@@ -28,3 +28,4 @@
 <% include partials/scripts.ejs %>
 <% include partials/markdown.ejs %>
 <% include partials/footer.ejs %>
+<% include partials/prettyprint.ejs %>
