--- a/views/partials/markdown.ejs
+++ b/views/partials/markdown.ejs
@@ -1,6 +1,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
 <script>
 $(function() {
+  marked.setOptions({
+    sanitize: true
+  });
   $('#markdown').keyup(function() {
     var val = $(this).val();
     $('#preview').html(marked(val));
