--- a/views/q_add.ejs
+++ b/views/q_add.ejs
@@ -26,3 +26,4 @@
 <% include partials/scripts.ejs %>
 <% include partials/markdown.ejs %>
 <% include partials/footer.ejs %>
+<% include partials/prettyprint.ejs %>
