update landing page UI

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,19 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <h1>Master Front-end JavaScript interview questions</h1>
-      <p class="lead">These are questions that come from a popular github repository <a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions/#html-questions">https://github.com/h5bp/Front-end-Developer-Interview-Questions/#html-questions</a>
+      <img src="http://res.cloudinary.com/dd6kwd0zn/image/upload/q_auto/v1503002293/javascript_logo_ax3ykq.png" class="img-responsive center-block">
+      <h1 class="text-center">front-end interview questions</h1>
+      <p class="lead text-center">Master JavaScript front-end interviews with jSeeker.</p>
+      <div class="text-center">
+        <a class="btn btn-default btn-lg" href="/qa">See Questions</a> <a class="btn btn-default btn-lg" id="quiz-btn">Quiz Me</a>
+      </div>
+      <hr>
+      <p class="small">NOTE: These are questions that come from the popular github repository <a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions/#html-questions">https://github.com/h5bp/Front-end-Developer-Interview-Questions/#html-questions</a>
         <br>
 
       <% if (!user) { %>
-        <p class="lead"><a href="/login">Login</a> to answer, self test and mark if you answered a question correctly. Everything is saved for future reference.</p>
+        <p class="small"><a href="/login">Login</a> to answer, self test and mark if you answered a question correctly. Everything is saved for future reference.</p>
       <% } %>
-        <div class="text-center">
-          <a class="btn btn-default btn-lg" href="/qa">See Questions</a> <a class="btn btn-default btn-lg" id="quiz-btn">Quiz Me</a>
-        </div>
-      </p>
     </div>
   </div>
 </div>
