landing page links updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         <br>
 
       <% if (!user) { %>
-        <p class="small"><a href="/login">Login</a> to answer, self test and mark if you answered a question correctly. Everything is saved for future reference.</p>
+        <p class="small"><a href="/login">Login</a> to answer, self test and mark if you answered a question correctly. Every answer can be saved for future reference.</p>
       <% } %>
     </div>
   </div>
