--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 footer">
-        <p class="text-center small" id="copyright">Copyright &copy; 2017 <a href="https://cabelin.com">Cabelin Software Solutions</a></p>
+        <p class="text-center small" id="copyright">Copyright &copy; 2017 <a href="https://cabelin.com">Cabelin Software Solutions</a><br>
+        <i class="fa fa-github"></i> <em>Github repository for this project can be found at <a href="https://github.com/ncabelin/jseeker" target="_blank">https://github.com/ncabelin/jseeker</a></em></p>
       </div>
     </div>
   </div>
