background color blue change

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/" style="color: #1DA1F2;">jSeeker</a>
+        <a class="navbar-brand" href="/"><i class="fa fa-trophy fa-lg"></i> j<strong>Seeker</strong></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
