--- a/static/scss/style.css
+++ b/static/scss/style.css
@@ -1,7 +1,9 @@
 body {
   background-color: #e6ecf0;
   font-family: 'Lato', sans-serif;
-  font-size: 18px; }
+  font-size: 18px;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizelegibility; }
 
 h1 {
   font-weight: bold;
@@ -21,7 +23,7 @@ textarea {
   .logo .whiteish {
     color: #fff; }
   .logo .darkish {
-    color: #1DA1F2 !important; }
+    color: #2a4b60 !important; }
 
 .logo-white {
   color: #fff; }
@@ -31,36 +33,36 @@ textarea {
   color: #66757f;
   border-bottom: 1px solid #acb1b4; }
   .navbar li a:hover, .navbar .active {
-    color: #1DA1F2;
+    color: #2a4b60;
     padding-bottom: 13px;
-    border-bottom: 2px solid #1DA1F2; }
+    border-bottom: 2px solid #2a4b60; }
 
 .navbar-brand {
   border-radius: 50%; }
 
 .navbar li a.username {
-  color: #1DA1F2; }
+  color: #2a4b60; }
 
 .well {
   background-color: #fff; }
 
 .jumbotron {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1da1f2+0,2989d8+0,7db9e8+100 */
-  background: #1da1f2;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2a4b60+25,3e7099+61,3e7099+78 */
+  background: #2a4b60;
   /* Old browsers */
-  background: -moz-linear-gradient(left, #1da1f2 0%, #2989d8 0%, #7db9e8 100%);
+  background: -moz-linear-gradient(left, #2a4b60 25%, #3e7099 61%, #3e7099 78%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, #1da1f2 0%, #2989d8 0%, #7db9e8 100%);
+  background: -webkit-linear-gradient(left, #2a4b60 25%, #3e7099 61%, #3e7099 78%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, #1da1f2 0%, #2989d8 0%, #7db9e8 100%);
+  background: linear-gradient(to right, #2a4b60 25%, #3e7099 61%, #3e7099 78%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1da1f2', endColorstr='#7db9e8',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2a4b60', endColorstr='#3e7099',GradientType=1 );
   /* IE6-9 */
   color: #fff;
   border-radius: 0 !important; }
 
 .fa-twitter {
-  color: #1DA1F2; }
+  color: #2a4b60; }
 
 .btn {
   margin-right: 10px;
@@ -68,15 +70,15 @@ textarea {
   margin-bottom: 10px; }
 
 .btn-twitter {
-  background-color: #1DA1F2;
+  background-color: #2a4b60;
   color: #fff;
-  border: 1px solid #1DA1F2; }
+  border: 1px solid #2a4b60; }
 
 .thumbnail {
   max-height: 100px; }
 
 .panel-default > .panel-heading {
-  background-color: #1DA1F2;
+  background-color: #2a4b60;
   color: white;
   font-size: 1.5em; }
 
@@ -85,7 +87,7 @@ textarea {
   border-top-right-radius: 0; }
 
 .list-group-item:hover {
-  background-color: #4db5f5;
+  background-color: #3a6783;
   color: white;
   text-decoration: none; }
 
@@ -110,7 +112,7 @@ a:hover {
   background-color: transparent; }
 
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #1DA1F2; }
+  background-color: #2a4b60; }
 
 .q-form {
   display: inline; }
