--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,6 +1,6 @@
 $grayish: #e6ecf0;
 $gray: #acb1b4;
-$blue: #1DA1F2;
+$blue: #2a4b60;
 $menuText: #66757f;
 $whiteish: #fff;
 
@@ -8,6 +8,8 @@ body {
 	background-color: $grayish;
 	font-family: 'Lato', sans-serif;
 	font-size: 18px;
+	-webkit-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
 }
 
 h1 {
@@ -65,12 +67,12 @@ textarea {
 }
 
 .jumbotron {
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1da1f2+0,2989d8+0,7db9e8+100 */
-	background: #1da1f2; /* Old browsers */
-	background: -moz-linear-gradient(left, #1da1f2 0%, #2989d8 0%, #7db9e8 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #1da1f2 0%,#2989d8 0%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #1da1f2 0%,#2989d8 0%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1da1f2', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2a4b60+25,3e7099+61,3e7099+78 */
+	background: #2a4b60; /* Old browsers */
+	background: -moz-linear-gradient(left, #2a4b60 25%, #3e7099 61%, #3e7099 78%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left, #2a4b60 25%,#3e7099 61%,#3e7099 78%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right, #2a4b60 25%,#3e7099 61%,#3e7099 78%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2a4b60', endColorstr='#3e7099',GradientType=1 ); /* IE6-9 */
 	color: $whiteish;
 	border-radius: 0 !important;
 }
