--- a/views/a_edit.ejs
+++ b/views/a_edit.ejs
@@ -17,7 +17,7 @@
         <div class="form-group">
           <select name="mark">
             <% var values = ['0','1','2'],
-                   options = ['Not answered', 'Correct', 'Incorrect'];
+                   options = ['Not answered', 'Correct', 'Unsure'];
               values.forEach(function(v, i) {
                 if (v == a.mark) {
                   %>
