--- a/views/q_read.ejs
+++ b/views/q_read.ejs
@@ -35,9 +35,9 @@
                     <button class="btn btn-default answer-delete btn-xs" data-id="<%= a._id %>"><i class="fa fa-trash"></i> delete</button>
                     <button class="btn btn-default show-answer btn-xs" data-sid="<%= a._id %>">show / hide answer</button>
                     <% if (a.mark === '1') { %>
-                      <span class="small btn btn-default btn-xs dark-btn">Marked Correct</span>
+                      <span class="check"><i class="fa fa-check fa-lg"></i></span>
                     <% } else if (a.mark === '2') { %>
-                      <span class="small btn btn-default btn-xs">Marked Incorrect</span>
+                      <span class="small btn btn-default btn-xs">Unsure if correct</span>
                     <% } %>
                     <br>
                     <span class="answer" data-aid="<%= a._id %>"><%= a.answer %><span>
