add meh for unsure status

--- a/static/scss/style.css
+++ b/static/scss/style.css
@@ -18,7 +18,10 @@ textarea {
 .qc_count {
   color: #acb1b4; }
 
-.check {
+.fa-check {
+  color: green; }
+
+.fa-meh-o {
   color: red; }
 
 .logo {
