--- a/views/a_add.ejs
+++ b/views/a_add.ejs
@@ -17,7 +17,7 @@
           <select name="mark">
             <option value="0" default>Not answered</option>
             <option value="1">Correct</option>
-            <option value="2">Incorrect</option>
+            <option value="2">Unsure</option>
           </select>
         </div>
         <input type="submit" value="SAVE" class="btn btn-default btn-lg">
