--- a/views/partials/markdown.ejs
+++ b/views/partials/markdown.ejs
@@ -4,7 +4,7 @@ $(function() {
   marked.setOptions({
     sanitize: true
   });
-  $('#preview').html(marked(val));
+  $('#preview').html(marked($(this).val()));
   $('#markdown').keyup(function() {
     var val = $(this).val();
     $('#preview').html(marked(val));
