fix markdown preview padding

--- a/views/a_edit.ejs
+++ b/views/a_edit.ejs
@@ -37,7 +37,7 @@
       </form>
     </div>
     <div class="col-md-6">
-      <div id="preview" style="background-color:white;">
+      <div id="preview" style="background-color:white; padding:10px;">
       </div>
     </div>
   </div>
