--- a/views/a_add.ejs
+++ b/views/a_add.ejs
@@ -25,7 +25,7 @@
       </form>
     </div>
     <div class="col-md-6">
-      <div id="preview" style="background-color:white;">
+      <div id="preview" style="background-color:white; padding:10px;">
       </div>
     </div>
   </div>
