--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <img src="http://res.cloudinary.com/dd6kwd0zn/image/upload/v1503003470/javascript_logo_v7fywa.png" class="img-responsive center-block">
+      <img src="https://res.cloudinary.com/dd6kwd0zn/image/upload/v1503003470/javascript_logo_v7fywa.png" class="img-responsive center-block" id="logo">
       <h1 class="text-center">front-end interview questions</h1>
       <p class="lead text-center">Master JavaScript front-end interviews with jSeeker.</p>
       <div class="text-center">
