--- a/static/scss/style.css
+++ b/static/scss/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #e6ecf0;
+  background: linear-gradient(rgba(230, 236, 240, 0.7), rgba(230, 236, 240, 0.7)), url("https://res.cloudinary.com/dd6kwd0zn/image/upload/v1503385802/markus-spiske-153926_2_f4opoy.jpg") center center no-repeat fixed;
+  background-size: cover;
   font-family: 'Lato', sans-serif;
   font-size: 18px;
   -webkit-font-smoothing: antialiased;
@@ -125,6 +126,9 @@ a:hover {
 
 @media screen and (max-width: 480px) {
   h3 {
-    font-size: 1em; } }
+    font-size: 1em; }
+
+  #logo {
+    height: 200px; } }
 
 /*# sourceMappingURL=style.css.map */
